--- a/src/apollo/core/templates/core/results.html
+++ b/src/apollo/core/templates/core/results.html
@@ -45,30 +45,30 @@
                         <th class="gray" {% if form.options.has_urban %}rowspan="3"{% endif %} style="vertical-align:middle">{{ location.name }} · <span class="muted"><em>{{ location.type }}</em></span></th>
                         {% if form.options.has_urban %}<th width="50" class="gray">All</th>{% endif %}
                         {% for vote in form.votes %}
-                        <th class="numeric gray">{% vote_proportion dataframe form.votes vote location.type.name location.name 'ALL' %}% ({% vote_count dataframe form.votes vote location.type.name location.name 'ALL' %})</th>
+                        <th class="numeric gray">{% vote_proportion dataframe form.votes vote location.type.name location.name 'ALL' %}%<br />({% vote_count dataframe form.votes vote location.type.name location.name 'ALL' %})</th>
                         {% if form.options.has_moe %}<th class="numeric gray">{% vote_margin_of_error dataframe form.votes vote location.type.name location.name 'ALL' %}%</th>{% endif %}
                         {% endfor %}
-                        <th class="numeric gray">{% reported_pct dataframe form.votes location.type.name location.name 'ALL' %}% ({% reported dataframe form.votes location.type.name location.name 'ALL' %})</th>
-                        <th class="numeric gray">{% missing_pct dataframe form.votes location.type.name location.name 'ALL' %}% ({% missing dataframe form.votes location.type.name location.name 'ALL' %})</th>
+                        <th class="numeric gray">{% reported_pct dataframe form.votes location.type.name location.name 'ALL' %}% <br />({% reported dataframe form.votes location.type.name location.name 'ALL' %})</th>
+                        <th class="numeric gray">{% missing_pct dataframe form.votes location.type.name location.name 'ALL' %}% <br />({% missing dataframe form.votes location.type.name location.name 'ALL' %})</th>
                     </tr>
                     {% if form.options.has_urban %}
                     <tr>
                         <td>Rural</td>
                         {% for vote in form.votes %}
-                        <td class="numeric">{% vote_proportion dataframe form.votes vote location.type.name location.name 'RURAL' %}% ({% vote_count dataframe form.votes vote location.type.name location.name 'RURAL' %})</td>
+                        <td class="numeric">{% vote_proportion dataframe form.votes vote location.type.name location.name 'RURAL' %}% <br />({% vote_count dataframe form.votes vote location.type.name location.name 'RURAL' %})</td>
                         {% if form.options.has_moe %}<td class="numeric">{% vote_margin_of_error dataframe form.votes vote location.type.name location.name 'RURAL' %}%</td>{% endif %}
                         {% endfor %}
-                        <td class="numeric ">{% reported_pct dataframe form.votes location.type.name location.name 'RURAL' %}% ({% reported dataframe form.votes location.type.name location.name 'RURAL' %})</td>
-                        <td class="numeric ">{% missing_pct dataframe form.votes location.type.name location.name 'RURAL' %}% ({% missing dataframe form.votes location.type.name location.name 'RURAL' %})</td>
+                        <td class="numeric ">{% reported_pct dataframe form.votes location.type.name location.name 'RURAL' %}% <br />({% reported dataframe form.votes location.type.name location.name 'RURAL' %})</td>
+                        <td class="numeric ">{% missing_pct dataframe form.votes location.type.name location.name 'RURAL' %}% <br />({% missing dataframe form.votes location.type.name location.name 'RURAL' %})</td>
                     </tr>
                     <tr>
                         <td>Urban</td>
                         {% for vote in form.votes %}
-                        <td class="numeric">{% vote_proportion dataframe form.votes vote location.type.name location.name 'URBAN' %}% ({% vote_count dataframe form.votes vote location.type.name location.name 'URBAN' %})</td>
+                        <td class="numeric">{% vote_proportion dataframe form.votes vote location.type.name location.name 'URBAN' %}% <br />({% vote_count dataframe form.votes vote location.type.name location.name 'URBAN' %})</td>
                         {% if form.options.has_moe %}<td class="numeric">{% vote_margin_of_error dataframe form.votes vote location.type.name location.name 'URBAN' %}%</td>{% endif %}
                         {% endfor %}
-                        <td class="numeric">{% reported_pct dataframe form.votes location.type.name location.name 'URBAN' %}% ({% reported dataframe form.votes location.type.name location.name 'URBAN' %})</td>
-                        <td class="numeric">{% missing_pct dataframe form.votes location.type.name location.name 'URBAN' %}% ({% missing dataframe form.votes location.type.name location.name 'URBAN' %})</td>
+                        <td class="numeric">{% reported_pct dataframe form.votes location.type.name location.name 'URBAN' %}% <br />({% reported dataframe form.votes location.type.name location.name 'URBAN' %})</td>
+                        <td class="numeric">{% missing_pct dataframe form.votes location.type.name location.name 'URBAN' %}% <br />({% missing dataframe form.votes location.type.name location.name 'URBAN' %})</td>
                     </tr>
                     {% endif %}
                     {% for sublocation in location.get_children %}
@@ -76,30 +76,30 @@
                         <td class="gray" {% if form.options.has_urban %}rowspan="3"{% endif %} style="vertical-align:middle">{{ sublocation.name }} · <span class="muted"><em>{{ sublocation.type }}</em></span></td>
                         {% if form.options.has_urban %}<th width="50" class="gray">All</th>{% endif %}
                         {% for vote in form.votes %}
-                        <th class="numeric gray">{% vote_proportion dataframe form.votes vote sublocation.type.name sublocation.name 'ALL' %}% ({% vote_count dataframe form.votes vote sublocation.type.name sublocation.name 'ALL' %})</th>
+                        <th class="numeric gray">{% vote_proportion dataframe form.votes vote sublocation.type.name sublocation.name 'ALL' %}% <br />({% vote_count dataframe form.votes vote sublocation.type.name sublocation.name 'ALL' %})</th>
                         {% if form.options.has_moe %}<th class="numeric gray">{% vote_margin_of_error dataframe form.votes vote sublocation.type.name sublocation.name 'ALL' %}%</th>{% endif %}
                         {% endfor %}
-                        <th class="numeric gray">{% reported_pct dataframe form.votes sublocation.type.name sublocation.name 'ALL' %}% ({% reported dataframe form.votes sublocation.type.name sublocation.name 'ALL' %})</th>
-                        <th class="numeric gray">{% missing_pct dataframe form.votes sublocation.type.name sublocation.name 'ALL' %}% ({% missing dataframe form.votes sublocation.type.name sublocation.name 'ALL' %})</th>
+                        <th class="numeric gray">{% reported_pct dataframe form.votes sublocation.type.name sublocation.name 'ALL' %}% <br />({% reported dataframe form.votes sublocation.type.name sublocation.name 'ALL' %})</th>
+                        <th class="numeric gray">{% missing_pct dataframe form.votes sublocation.type.name sublocation.name 'ALL' %}% <br />({% missing dataframe form.votes sublocation.type.name sublocation.name 'ALL' %})</th>
                     </tr>
                     {% if form.options.has_urban %}
                     <tr>
                         <td>Rural</td>
                         {% for vote in form.votes %}
-                        <td class="numeric">{% vote_proportion dataframe form.votes vote sublocation.type.name sublocation.name 'RURAL' %}% ({% vote_count dataframe form.votes vote sublocation.type.name sublocation.name 'RURAL' %})</td>
+                        <td class="numeric">{% vote_proportion dataframe form.votes vote sublocation.type.name sublocation.name 'RURAL' %}% <br />({% vote_count dataframe form.votes vote sublocation.type.name sublocation.name 'RURAL' %})</td>
                         {% if form.options.has_moe %}<td class="numeric">{% vote_margin_of_error dataframe form.votes vote sublocation.type.name sublocation.name 'RURAL' %}%</td>{% endif %}
                         {% endfor %}
-                        <td class="numeric">{% reported_pct dataframe form.votes sublocation.type.name sublocation.name 'RURAL' %}% ({% reported dataframe form.votes sublocation.type.name sublocation.name 'RURAL' %})</td>
-                        <td class="numeric">{% missing_pct dataframe form.votes sublocation.type.name sublocation.name 'RURAL' %}% ({% missing dataframe form.votes sublocation.type.name sublocation.name 'RURAL' %})</td>
+                        <td class="numeric">{% reported_pct dataframe form.votes sublocation.type.name sublocation.name 'RURAL' %}% <br />({% reported dataframe form.votes sublocation.type.name sublocation.name 'RURAL' %})</td>
+                        <td class="numeric">{% missing_pct dataframe form.votes sublocation.type.name sublocation.name 'RURAL' %}% <br />({% missing dataframe form.votes sublocation.type.name sublocation.name 'RURAL' %})</td>
                     </tr>
                     <tr>
                         <td>Urban</td>
                         {% for vote in form.votes %}
-                        <td class="numeric">{% vote_proportion dataframe form.votes vote sublocation.type.name sublocation.name 'URBAN' %}% ({% vote_count dataframe form.votes vote sublocation.type.name sublocation.name 'URBAN' %})</td>
+                        <td class="numeric">{% vote_proportion dataframe form.votes vote sublocation.type.name sublocation.name 'URBAN' %}% <br />({% vote_count dataframe form.votes vote sublocation.type.name sublocation.name 'URBAN' %})</td>
                         {% if form.options.has_moe %}<td class="numeric">{% vote_margin_of_error dataframe form.votes vote sublocation.type.name sublocation.name 'URBAN' %}%</td>{% endif %}
                         {% endfor %}
-                        <td class="numeric">{% reported_pct dataframe form.votes sublocation.type.name sublocation.name 'URBAN' %}% ({% reported dataframe form.votes sublocation.type.name sublocation.name 'URBAN' %})</td>
-                        <td class="numeric">{% missing_pct dataframe form.votes sublocation.type.name sublocation.name 'URBAN' %}% ({% missing dataframe form.votes sublocation.type.name sublocation.name 'URBAN' %})</td>
+                        <td class="numeric">{% reported_pct dataframe form.votes sublocation.type.name sublocation.name 'URBAN' %}% <br />({% reported dataframe form.votes sublocation.type.name sublocation.name 'URBAN' %})</td>
+                        <td class="numeric">{% missing_pct dataframe form.votes sublocation.type.name sublocation.name 'URBAN' %}% <br />({% missing dataframe form.votes sublocation.type.name sublocation.name 'URBAN' %})</td>
                     </tr>
                     {% endif %}
                     {% endfor %}
