--- a/src/apollo/core/templates/core/results.html
+++ b/src/apollo/core/templates/core/results.html
@@ -30,6 +30,7 @@
                         {% for party in form.parties %}
                         <th width="100" {% if form.options.has_moe %}colspan="2"{% endif %} class="gray" style="text-align:center">{{ party }}</th>
                         {% endfor %}
+                        <th width="100" {% if form.options.has_moe %}colspan="2"{% endif %} class="gray" style="text-align:center">&nbsp;</th>
                         <th class="gray">&nbsp;</th>
                         <th class="gray">&nbsp;</th>
                     </tr>
@@ -38,6 +39,8 @@
                         <td class="centered"><em>Votes</em></td>
                         {% if form.options.has_moe %}<td class="centered"><em>MoE</em></td>{% endif %}
                         {% endfor %}
+                        <td class="centered"><em>RB</em></td>
+                        {% if form.options.has_moe %}<td class="centered"><em>MoE</em></td>{% endif %}
                         <td class="centered" width="10%"><em>Reported</em></td>
                         <td class="centered" width="10%"><em>Missing</em></td>
                     </tr>
@@ -48,6 +51,8 @@
                         <th class="numeric gray">{% vote_proportion dataframe form.votes vote location.type.name location.name 'ALL' %}%<br />({% vote_count dataframe form.votes vote location.type.name location.name 'ALL' %})</th>
                         {% if form.options.has_moe %}<th class="numeric gray">{% vote_margin_of_error dataframe form.votes vote location.type.name location.name 'ALL' %}%</th>{% endif %}
                         {% endfor %}
+                        <th class="numeric gray">{% rejected_proportion form dataframe location.type.name location.name 'ALL' %}%<br />({% rejected_count form dataframe location.type.name location.name 'ALL' %})</th>
+                        {% if form.options.has_moe %}<th class="numeric gray">{% rejected_margin_of_error form dataframe location.type.name location.name 'ALL' %}%</th>{% endif %}
                         <th class="numeric gray">{% reported_pct dataframe form.votes location.type.name location.name 'ALL' %}% <br />({% reported dataframe form.votes location.type.name location.name 'ALL' %})</th>
                         <th class="numeric gray">{% missing_pct dataframe form.votes location.type.name location.name 'ALL' %}% <br />({% missing dataframe form.votes location.type.name location.name 'ALL' %})</th>
                     </tr>
@@ -58,6 +63,8 @@
                         <td class="numeric">{% vote_proportion dataframe form.votes vote location.type.name location.name 'RURAL' %}% <br />({% vote_count dataframe form.votes vote location.type.name location.name 'RURAL' %})</td>
                         {% if form.options.has_moe %}<td class="numeric">{% vote_margin_of_error dataframe form.votes vote location.type.name location.name 'RURAL' %}%</td>{% endif %}
                         {% endfor %}
+                        <td class="numeric">{% rejected_proportion form dataframe location.type.name location.name 'RURAL' %}% <br />({% rejected_count form dataframe location.type.name location.name 'RURAL' %})</td>
+                        {% if form.options.has_moe %}<td class="numeric">{% rejected_margin_of_error form dataframe location.type.name location.name 'RURAL' %}%</td>{% endif %}
                         <td class="numeric ">{% reported_pct dataframe form.votes location.type.name location.name 'RURAL' %}% <br />({% reported dataframe form.votes location.type.name location.name 'RURAL' %})</td>
                         <td class="numeric ">{% missing_pct dataframe form.votes location.type.name location.name 'RURAL' %}% <br />({% missing dataframe form.votes location.type.name location.name 'RURAL' %})</td>
                     </tr>
@@ -67,6 +74,8 @@
                         <td class="numeric">{% vote_proportion dataframe form.votes vote location.type.name location.name 'URBAN' %}% <br />({% vote_count dataframe form.votes vote location.type.name location.name 'URBAN' %})</td>
                         {% if form.options.has_moe %}<td class="numeric">{% vote_margin_of_error dataframe form.votes vote location.type.name location.name 'URBAN' %}%</td>{% endif %}
                         {% endfor %}
+                        <td class="numeric">{% rejected_proportion form dataframe location.type.name location.name 'URBAN' %}% <br />({% rejected_count form dataframe location.type.name location.name 'URBAN' %})</td>
+                        {% if form.options.has_moe %}<td class="numeric">{% rejected_margin_of_error form dataframe location.type.name location.name 'URBAN' %}%</td>{% endif %}
                         <td class="numeric">{% reported_pct dataframe form.votes location.type.name location.name 'URBAN' %}% <br />({% reported dataframe form.votes location.type.name location.name 'URBAN' %})</td>
                         <td class="numeric">{% missing_pct dataframe form.votes location.type.name location.name 'URBAN' %}% <br />({% missing dataframe form.votes location.type.name location.name 'URBAN' %})</td>
                     </tr>
@@ -79,6 +88,8 @@
                         <th class="numeric gray">{% vote_proportion dataframe form.votes vote sublocation.type.name sublocation.name 'ALL' %}% <br />({% vote_count dataframe form.votes vote sublocation.type.name sublocation.name 'ALL' %})</th>
                         {% if form.options.has_moe %}<th class="numeric gray">{% vote_margin_of_error dataframe form.votes vote sublocation.type.name sublocation.name 'ALL' %}%</th>{% endif %}
                         {% endfor %}
+                        <th class="numeric gray">{% rejected_proportion form dataframe sublocation.type.name sublocation.name 'ALL' %}% <br />({% rejected_count form dataframe sublocation.type.name sublocation.name 'ALL' %})</th>
+                        {% if form.options.has_moe %}<th class="numeric gray">{% rejected_margin_of_error form dataframe sublocation.type.name sublocation.name 'ALL' %}%</th>{% endif %}
                         <th class="numeric gray">{% reported_pct dataframe form.votes sublocation.type.name sublocation.name 'ALL' %}% <br />({% reported dataframe form.votes sublocation.type.name sublocation.name 'ALL' %})</th>
                         <th class="numeric gray">{% missing_pct dataframe form.votes sublocation.type.name sublocation.name 'ALL' %}% <br />({% missing dataframe form.votes sublocation.type.name sublocation.name 'ALL' %})</th>
                     </tr>
@@ -89,6 +100,8 @@
                         <td class="numeric">{% vote_proportion dataframe form.votes vote sublocation.type.name sublocation.name 'RURAL' %}% <br />({% vote_count dataframe form.votes vote sublocation.type.name sublocation.name 'RURAL' %})</td>
                         {% if form.options.has_moe %}<td class="numeric">{% vote_margin_of_error dataframe form.votes vote sublocation.type.name sublocation.name 'RURAL' %}%</td>{% endif %}
                         {% endfor %}
+                        <td class="numeric">{% rejected_proportion form dataframe sublocation.type.name sublocation.name 'RURAL' %}% <br />({% rejected_count form dataframe sublocation.type.name sublocation.name 'RURAL' %})</td>
+                        {% if form.options.has_moe %}<td class="numeric">{% rejected_margin_of_error form dataframe sublocation.type.name sublocation.name 'RURAL' %}%</td>{% endif %}
                         <td class="numeric">{% reported_pct dataframe form.votes sublocation.type.name sublocation.name 'RURAL' %}% <br />({% reported dataframe form.votes sublocation.type.name sublocation.name 'RURAL' %})</td>
                         <td class="numeric">{% missing_pct dataframe form.votes sublocation.type.name sublocation.name 'RURAL' %}% <br />({% missing dataframe form.votes sublocation.type.name sublocation.name 'RURAL' %})</td>
                     </tr>
@@ -98,6 +111,8 @@
                         <td class="numeric">{% vote_proportion dataframe form.votes vote sublocation.type.name sublocation.name 'URBAN' %}% <br />({% vote_count dataframe form.votes vote sublocation.type.name sublocation.name 'URBAN' %})</td>
                         {% if form.options.has_moe %}<td class="numeric">{% vote_margin_of_error dataframe form.votes vote sublocation.type.name sublocation.name 'URBAN' %}%</td>{% endif %}
                         {% endfor %}
+                        <td class="numeric">{% rejected_proportion form dataframe sublocation.type.name sublocation.name 'URBAN' %}% <br />({% rejected_count form dataframe sublocation.type.name sublocation.name 'URBAN' %})</td>
+                        {% if form.options.has_moe %}<td class="numeric">{% rejected_margin_of_error form dataframe sublocation.type.name sublocation.name 'URBAN' %}%</td>{% endif %}
                         <td class="numeric">{% reported_pct dataframe form.votes sublocation.type.name sublocation.name 'URBAN' %}% <br />({% reported dataframe form.votes sublocation.type.name sublocation.name 'URBAN' %})</td>
                         <td class="numeric">{% missing_pct dataframe form.votes sublocation.type.name sublocation.name 'URBAN' %}% <br />({% missing dataframe form.votes sublocation.type.name sublocation.name 'URBAN' %})</td>
                     </tr>
