--- a/src/apollo/zimbabwe/templates/503.html
+++ b/src/apollo/zimbabwe/templates/503.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Ongoing Maintanance</title>
+    <title>Ongoing Maintenance</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content=""><link href="/assets/css/bootstrap.css" rel="stylesheet">
@@ -19,7 +19,7 @@
       </div>
     <div class="row-fluid">
 		<div class="span4 offset4" style="text-align:center; margin-top:14em;">
-			<legend style="border-bottom:0px; margin-bottom:0px;">Ongoing Maintenace</legend>
+			<legend style="border-bottom:0px; margin-bottom:0px;">Ongoing Maintenance</legend>
 			<p>The application is currently down due to ongoing maintenance, however, we will be up and running shortly! Thanks.</p>
 		</div>
 	</div>
