--- a/src/apollo/core/templates/core/layout.html
+++ b/src/apollo/core/templates/core/layout.html
@@ -21,6 +21,9 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/table-fixed-header.js"></script>    
     <script type="text/javascript" src="{{ STATIC_URL }}js/protovis.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/custom.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/highcharts.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/raphael-min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/kartograph.js"></script>
     {% block javascripts %}{% endblock %}
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
