--- a/src/apollo/core/templates/core/submission_items.html
+++ b/src/apollo/core/templates/core/submission_items.html
@@ -5,8 +5,8 @@
     {% for location_type in location_types %}
     <td>{% get_location_for_type submission location_type %}</td>
     {% endfor %}
-    <td>{{ submission.observer.name }}</td>
-    <td>{{ submission.observer.phone }}</td>
+    <td>{{ submission.observer.name|default_if_none:"" }}</td>
+    <td>{{ submission.observer.phone|default_if_none:"" }}</td>
     {% if form.type == 'CHECKLIST' %}
     {% for group in form_groups %}
     <td style="text-align:center">
