add samples to observers filter

--- a/src/apollo/core/templates/core/contact_list.html
+++ b/src/apollo/core/templates/core/contact_list.html
@@ -23,12 +23,13 @@
           {{ filter_form.observer_id }}
           {{ filter_form.name }}
           {{ filter_form.location }}      
+          {{ filter_form.sample }}
         </div>
         <div class="controls controls-row">
           {{ filter_form.role }}
           {{ filter_form.partner }}
           {{ filter_form.contact__connection__identity }}
-          <button type="submit" class="btn btn-warning" style="margin-left:1em"><i class="icon-search icon-white"></i> Search</button>
+          <button type="submit" class="btn btn-warning" style="margin-left:2em"><i class="icon-search icon-white"></i> Search</button>
           <a class="btn form-reset" style="margin-left:0.5em">Clear</a>
         </div> 
       </form>
